--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -14,7 +14,11 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up C++ environment
-      run: sudo apt-get update && sudo apt-get install -y build-essential
+      run: sudo apt-get update && sudo apt-get install -y build-essential valgrind
 
     - name: Build with Makefile
       run: make
+
+    - name: Run Valgrind to check for memory leaks
+      run: |
+        valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose ./Test.exe
