fix(github action): fix command

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,4 +21,4 @@ jobs:
 
     - name: Run Valgrind to check for memory leaks
       run: |
-        valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose ./build/Test.exe 1000 1 1000
+        valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose ./build/Test.exe --row_number=160 --predicates=1:100
