--- a/tools/experiment/test.yaml
+++ b/tools/experiment/test.yaml
@@ -1,3 +1,3 @@
-row_num: [1, 20, 40, 80, 120, 160]
-value_range: [100, 1000, 1000]
-predicates: ["1:100"]
+row_num: [0, 1, 2, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 141072]
+value_range: [100, 1000, 1000, 10000, 100000]
+predicates: ["1:100", "1:100,2:50"]
